@@ -1,3 +1,7 @@
 This is the `stats` metricset of the Kibana module. This stats endpoint is available in 6.4 by default.
 
 The intention of the Kibana module is to have a minimal data set that works across Kibana versions.
+
+=== Module-specific configuration notes
+
+If the Kibana instance is using a basepath in its URL, you must set the `basepath` setting for this module with the same value.
